# sms-fwd-workers

./: .dev.vars.example  Cargo.toml  README.md  get_webhook.sh  rust-toolchain.toml  set_commands.sh  set_webhook.sh  wrangler.toml
src/: lib.rs
