[package]
name = "sms-fwd-workers"
version = "0.1.0"
edition = "2024"
authors = [ "NKID00 <this@nkid00.name>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0" }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"
regex = "1.11.1"
indoc = "2.0.6"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
